Basic Gulp tasks & structure added. Close #4

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "url": "https://github.com/cyber-nomads/bash-reference-manual/issues"
   },
   "homepage": "https://github.com/cyber-nomads/bash-reference-manual#readme",
-  "dependencies": {
-    "gulp": "3.9.1"
+  "devDependencies": {
+    "gulp": "3.9.1",
+    "gulp-clean": "0.4.0",
+    "gulp-debug": "4.0.0"
   }
 }
