--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "gulp-clean": "0.4.0",
     "gulp-debug": "4.0.0",
     "gulp-html-beautify": "1.0.1",
-    "gulp-html-lint": "0.0.2"
+    "gulp-html-lint": "0.0.2",
+    "gulp-sass": "4.0.1",
+    "gulp-htmlmin": "4.0.0"
   }
 }
